<?xml version="1.0"?>
<package format="2">
  <name>blasfeo</name>
  <version>0.0.0</version>
  <description>The blasfeo package</description>
  <maintainer email="sugihara@todo.todo">sugihara</maintainer>

  <license>TODO</license>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>git</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
